--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,29 @@
 <!doctype html>
 <html>
+
 <head>
-	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+   <meta charset='utf8'>
+   <meta name='viewport' content='width=device-width'>
 
-	<title>no small thing</title>
+   <title>no small thing</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/bundle.css'>
+   <link rel='icon' type='image/png' href='/favicon.png'>
+   <link rel='stylesheet' href='/global.css'>
+   <link rel='stylesheet' href='/bundle.css'>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145057192-1"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-	<script defer src='/bundle.js'></script>
+      gtag('config', 'UA-145057192-1', { 'anonymize_ip': true });
+
+   </script>
+
+   <script defer src='/bundle.js'></script>
 </head>
 
 <body>
 </body>
+
 </html>
